# github-secret-scanner

./: .gitignore  Cargo.toml  config.example.toml
docs/superpowers/plans/: 2026-05-29-github-secret-scanner.md
docs/superpowers/specs/: 2026-05-29-github-secret-scanner-design.md
src/: alchemy.rs  alerter.rs  analyzer.rs  cache.rs  config.rs  events.rs  gitlab.rs  main.rs  npm.rs  pastebin.rs  poller.rs  pypi.rs  validator.rs
