[package]
name = "github-secret-scanner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "github-secret-scanner"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
once_cell = "1"
bs58 = "0.5"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
